Thu Apr  6 08:20:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/CCM_Component.idl:
          Removed the forward declaration of IRObject and just include
          ciao/CCM_Component.idl. The forward declaration is causing
          problems with the versioned namespace support, will investigate
          this later

Wed Apr  5 20:57:32 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * TAO/CIAO/ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.cpp

          Make debug statement debug_level controlled.

Wed Apr  5 18:49:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/CIAO_Events/CIAOEvents.hpp:
          Fixed compile errors

Wed Apr  5 13:18:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.h:
          Fixed pragma once warning

        * ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.cpp:
          Fixed conversion warning

Wed Apr  5 12:24:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/Basic_Deployment_Data.hpp:
          Fixed compile errors

Tue Apr  4 18:11:37 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciaosvcs/Events/CIAO_EventService_Factory_impl.cpp
        * ciaosvcs/Events/CIAO_EventService_Factory_impl.h

          Fixed an warning in WinXP_BCB6_Pro_Dynamic_Debug build
          by modifying the name of the original "init" method.

Tue Apr  4 17:27:52 UTC 2006  xiong,ming  <ming.xiong@vanderbilt.edu>

        * tools/Config_Handlers/CIAO_Events/test.cpp

          Fixed an warning.

Mon Apr  3 20:00:11 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/Literals.hpp:
        * CIDLC/Literals.cpp:

          Changed an enum value 'SIZE' to 'LIT_SIZE' to avoid an
          apparent conflict with something in WinDef.h on
          Windows.

Thu Mar 30 18:28:32 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciao/Deployment_Events.idl